--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,120 @@
-<h1> Welcome to {{ title }} </h1>
+<style>
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 8px 0;
+  }
 
-<table>
-  <tr>
-    <th>Item</th>
-    <th>Category</th>
-    <th>Price</th>
-  </tr>
-  <tr *ngFor="let menuItem of menuItemsArray">
-    <td>{{menuItem.item}}</td>
-    <td>{{menuItem.category}}</td>
-    <td>{{menuItem.price|currency}}</td>
-    <td><button (click)="buyItem(menuItem)">Buy</button></td>
-  </tr>
-</table>
+  .content {
+    display: flex;
+    margin: 82px auto 32px;
+    padding: 0 16px;
+    max-width: 960px;
+    flex-direction: column;
+    align-items: center;
+  }
 
-<br>
-Bought Items:
-<table>
-  <tr>
-    <th>Item</th>
-    <th>Category</th>
-    <th>Price</th>
-  </tr>
-  <tr *ngFor="let menuItem of menuItemsPurchasedItems">
-    <td>{{menuItem.item}}</td>
-    <td>{{menuItem.category}}</td>
-    <td>{{menuItem.price|currency}}</td>
-  </tr>
-  <tr>
-    <td><b>Total Price</b></td>
-    <td></td>
-    <td><b>{{totalPrice|currency}}</b></td>
-  </tr>
-</table>
+  p {
+    margin: 0;
+  }
+  .styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table1 thead tr {
+    background-color: #980000;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table2 thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table2 tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.styled-table1 tbody tr:last-of-type {
+    border-bottom: 2px solid #980000;
+}
 
 
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+
+</style>
+
+<div class="content">
+  <h1> Welcome to {{ title }} </h1>
+
+  <table class="styled-table styled-table1">
+    <thead>
+    <tr>
+      <th>Item</th>
+      <th>Category</th>
+      <th>Price</th>
+      <th>Buy Item</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let menuItem of menuItemsArray">
+      <td>{{menuItem.item}}</td>
+      <td>{{menuItem.category}}</td>
+      <td>{{menuItem.price|currency}}</td>
+      <td><button (click)="buyItem(menuItem)">Buy</button></td>
+    </tr>
+  </tbody>
+  </table>
+
+  <br>
+  <h2>Bought Items:</h2>
+  <button (click)="reset()">Reset Order</button>
+  <table class="styled-table styled-table2">
+    <thead>
+    <tr>
+      <th>Item</th>
+      <th>Category</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let menuItem of menuItemsPurchasedItems">
+      <td>{{menuItem.item}}</td>
+      <td>{{menuItem.category}}</td>
+      <td>{{menuItem.price|currency}}</td>
+    </tr>
+    <tr>
+      <td><b>Total Price</b></td>
+      <td></td>
+      <td><b>{{totalPrice|currency}}</b></td>
+    </tr>
+  </tbody>
+  </table>
+
+
+</div>
