--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   h5,
   h6 {
     margin: 8px 0;
+
   }
 
   .content {
@@ -67,6 +68,60 @@
     color: #009879;
 }
 
+.container {
+        position: absolute;
+        top: 10%;
+      }
+      .button {
+        border: none;
+        display: block;
+        text-align: center;
+        cursor: pointer;
+        text-transform: uppercase;
+        outline: none;
+        overflow: hidden;
+        position: relative;
+        color: #eeeeee;
+        font-weight: 600;
+        font-size: 15px;
+        background-color: #153f00;
+        padding: 15px 50px;
+        margin: 0 auto;
+      }
+      .button span {
+        position: relative;
+        z-index: 1;
+      }
+      .button:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 470%;
+        width: 140%;
+        background: #52b71f;
+        -webkit-transition: all .5s ease-in-out;
+        transition: all .5s ease-in-out;
+        -webkit-transform: translateX(-100%) translateY(-25%) rotate(45deg);
+        transform: translateX(-100%) translateY(-25%) rotate(45deg);
+      }
+      .button:hover:after {
+        -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+        transform: translateX(-9%) translateY(-25%) rotate(45deg);
+      }
+
+      footer {
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+    line-height: 20px;
+  }
+
+  footer a {
+    display: flex;
+    align-items: center;
+  }
+
 </style>
 
 <div class="content">
@@ -86,7 +141,7 @@
       <td>{{menuItem.item}}</td>
       <td>{{menuItem.category}}</td>
       <td>{{menuItem.price|currency}}</td>
-      <td><button (click)="buyItem(menuItem)">Buy</button></td>
+      <td><button (click)="buyItem(menuItem)" class='button'><span>Buy</span></button></td>
     </tr>
   </tbody>
   </table>
@@ -116,5 +171,20 @@
   </tbody>
   </table>
 
+    <!-- Footer -->
+    <footer>
+      Find this project on github&nbsp;
+      <a href="https://github.com/jovandrei/AngularTest/tree/master/src" target="_blank" rel="noopener">
+        <div class="github-star-badge">
+          <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+        </div>
+        https://github.com/jovandrei/AngularTest/tree/master/src
+        <div class="github-star-badge">
+          <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+        </div>
+      </a>
+
+  </footer>
 
 </div>
+
