--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,24 @@
-<div class="form-style-5">
-
-  <h1>Profile Editor</h1>
-  <h2>Update User Information</h2>
-
-  <div *ngIf="displayEdit">
-        <form (ngSubmit)="updateUserInformation()">
-          <p>
-            <label class="bolded">Name: </label>
-            <input type="text" name="name" value="{{user.name}}" [(ngModel)] = "newName"/>
-          </p>
-          <p>
-            <label class="bolded">Age: </label>
-            <input type="text" name="age" [(ngModel)] = "newAge"/>
-          </p>
-          <p>
-            <label class="bolded">Favorite Color: </label>
-            <input type="text" name="color" [(ngModel)] = "newColor"/>
-          </p>
-          <p>
-            <label class="bolded">Favorite Animal: </label>
-            <select name="animal" [(ngModel)]="animalIndex" [(ngModel)] = "newAnimal">
-                <option *ngFor="let animal of animalArray;index as i" value={{i}}>
-                  {{animal}}
-                </option>
-            </select>
-          </p>
-          <button (click)="toggleEdit()" class="btn">Toggle Edit</button>
-          <button type="submit" class="btn">Save Changes</button>
-
-          <div  class="savedClass" *ngIf="displaySaved">Saved...</div>
-        </form>
-
-        <br>
+<div>
+  <div class="form-style-4">
+    <h1>Select task</h1>
+    <button (click)="selectTask('Task1')" class="btn">Profile Editor</button>
+    <button (click)="selectTask('Task2')" class="btn">Make Money</button>
+    <button (click)="selectTask('Task3')" class="btn">Paint something</button>
   </div>
 
-  <div *ngIf="!displayEdit">
-    <form>
-      <p>
-        <label class="bolded">Name: </label>
-        <label type="text" >{{ user.name }}</label>
-      </p>
-      <p>
-        <label class="bolded">Age: </label>
-        <label type="text">{{ user.age }}</label>
-      </p>
-      <p>
-        <label class="bolded">Favorite Color: </label>
-        <label type="text">{{ user.favoriteColor }}</label>
-      </p>
-      <p>
-        <label class="bolded">Favorite Animal: </label>
-        <label type="text">{{ animalArray[user.animal] }}</label>
-      </p>
-      <button (click)="toggleEdit()" class="btn">Toggle Edit</button>
-    </form>
-    <br>
+  <div class="form-style-5">
+    <h1>Program</h1>
+    <div *ngIf="task=='Task1'">
+      <app-task1></app-task1>
+    </div>
+    <div *ngIf="task=='Task2'">
+      <app-task2></app-task2>
+    </div>
+    <div *ngIf="task=='Task3'">
+      <app-task3></app-task3>
+    </div>
   </div>
+
+
 
 </div>
