--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,6 @@
-
 .style-1 {
   min-height: 500px;
-  width: 500px;
+  width: 30%;
   padding: 20px;
   border-radius: 8px;
   margin: 50px auto auto 50px;
@@ -10,10 +9,46 @@
   float: left
 }
 
+.style-2 {
+  min-height: 500px;
+  width: 50%;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 50px auto auto 50px;
+  background-color: #e8eeef;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  float: left
+}
+
+.style-3 {
+  position: relative;
+  width: 85%;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 50px;
+  background-color: #e8eeef;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  float: left
+}
+
+.style-4 {
+  position: relative;
+  min-height: 150px;
+  width: 120px;
+  padding: 20px;
+  border-radius: 8px;
+  font-family: Open Sans;
+  font-weight: 300;
+  margin: 10px;
+  background: #ffffff;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  float: left
+}
+
 label {
   display: inline-block;
   margin: 0;
-  padding: 10px;
+  padding: 3px;
   width: 50%;
   box-sizing: border-box;
   color: #8a97a0;
@@ -21,4 +56,8 @@ label {
 
 .bolded {
   font-weight: bold;
+}
+
+.center {
+  text-align: center;
 }
