--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="container">
   <div class="style-1">
     <form (ngSubmit)="UpdateLatLon()">
       <p>
@@ -9,6 +9,7 @@
         <label>lon:</label>
         <input type="text" name="lon" value="{{newLon}}" [(ngModel)]="newLon" />
       </p>
+      <button class="btn">submit</button>
     </form>
     <p>
       <label class="bolded">openWeatherSysCountry: </label>
@@ -41,38 +42,30 @@
       <label class="bolded">openWeatherMainTempMax: </label>
       <label>{{openWeatherMainTempMax}} °F</label>
     </p>
+    <p>
+      <label class="bolded">api.weather.gov Status: </label>
+      <label>{{status}}</label>
+    </p>
 
-    <div style="height: 300px; width:500px" id="map">
-      leaflet
-    </div>
 
   </div>
 
-  <div class="style-1">
-    <p>
-      <label>api.weather.gov Status: </label>
-      <label>{{status}}</label>
-    </p>
-    <p>
-      <label>city: </label>
-      <label>{{city}}</label>
-    </p>
-    <p>
-      <label>state: </label>
-      <label>{{state}}</label>
-    </p>
+  <div class="style-2">
+    <div style="height: 500px; width:100%" id="map">
+      leaflet
+    </div>
+  </div>
 
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Temperature</th>
-        <th>Icon</th>
-      </tr>
-      <tr *ngFor="let period of this.weatherObject.properties.periods">
-        <td>{{ period.name }}</td>
-        <td>{{ period.temperature }} °F</td>
-        <td><img src="{{ period.icon }}" /></td>
-      </tr>
-    </table>
+  <div class="style-3">
+    <div class="style-4" *ngFor="let period of this.weatherObject.properties.periods">
+      <div class="center">
+        <img src="{{ period.icon }}" />
+      </div>
+      <br>
+      {{ period.name }}
+      <br>
+      <label class="label2">{{ period.temperature }} °F</label>
+
+    </div>
   </div>
 </div>
