--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<app-ticket-master-form>
-  
-</app-ticket-master-form>
+<div class="bg-primary text-white p-5 text-center">
+  <h1>Ticketmaster</h1>
+  <p>Find your event!</p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <app-ticket-master-form></app-ticket-master-form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <app-results-of-events></app-results-of-events>
+    </div>
+  </div>
+</div>
