--- a/src/app/components/total-expenses/total-expenses.component.html
+++ b/src/app/components/total-expenses/total-expenses.component.html
@@ -1,8 +1,32 @@
+<div class="container">
+  <div class="row">
+    <div class="col-sm">Total Budget:</div>
+    <div class="col-sm">{{getBudget() | currency}}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm">Total Expenses:</div>
+    <div class="col-sm">{{expenses | currency}}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm">Remaining Budget:</div>
+    <div class="col-sm">{{getRemainingBudget() | currency}}</div>
+  </div>
+  <mat-progress-bar  class="green-progress" mode="determinate" value="{{getExpenses2() | number}}"></mat-progress-bar>
+</div>
+
 <div>
-  <p>
-    <label>Total Expenses:</label> <label>{{expenses | currency}}</label>
-    <br>
-    <label>Total Budget:</label> <label>{{getBudget() | currency}}</label>
-    <mat-progress-bar mode="determinate" value="{{getExpenses2() | number}}"></mat-progress-bar>
-  </p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Category</th>
+        <th>Amount</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let category of getCategories(); let i = index">
+        <td>{{category}}</td>
+        <td>{{getExpensesPerCategory(i) | currency}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
