--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-primary text-white p-5 text-center">
+<div class="bg-primary bg-opacity-30 text-white p-5 text-center">
   <h1>Ticketmaster</h1>
   <p>Find your event!</p>
 </div>
