--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-ticket-master-form>
-  
-</app-ticket-master-form>
+<app-results-of-events></app-results-of-events>
+<h1><a routerLink="/ticketMaster">Ticket Master</a>&nbsp;
+    <a routerLink="/bucket">Bucket List</a>
+    </h1>
+    <router-outlet></router-outlet>
