--- a/src/app/Component/results-of-events/results-of-events.component.html
+++ b/src/app/Component/results-of-events/results-of-events.component.html
@@ -1,10 +1,22 @@
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <h1>Results of Events</h1>
-<ul *ngIf="(getEvents() | json) != '{}' ">
-  <div *ngIf="(getEvents()._embedded) != undefined ">
-  <div *ngFor="let event of getEvents()._embedded.events">
+<ul *ngIf="(ticketMasterEventsInterface| json) != '{}' ">
+  <div *ngIf="(ticketMasterEventsInterface._embedded) != undefined ">
+  <div *ngFor="let event of ticketMasterEventsInterface._embedded.events">
     <li>
       <a routerLink="/ticketMaster/{{event.id}}">{{event.name}}</a>
     </li>
   </div>
+  <form>
+    
+    <button (click)="getLastPage()"> Last</button>
+    <button (click)="getFirstPage()"> First</button>
+    <Label> {{ticketMasterEventsInterface.page.size}}</Label>
+    <button (click)="getNextPage()"> Next</button>
+
+    
+  </form>
 </div>
 </ul>
