created db service, event details, changes on app.component, app.module, searchcriteriainterface made values optional, added more styling, etc

--- a/src/app/Component/event-details/event-details.component.html
+++ b/src/app/Component/event-details/event-details.component.html
@@ -1,1 +1,7 @@
-<p>event-details works!</p>
+<button (click)="addEvent()">Add to BucketList</button>
+<label>Event Name:</label>
+<div *ngIf="(tmEvent | json) != '{}' ">
+  <div *ngIf="(tmEvent._embedded) != undefined ">
+    <label>{{tmEvent._embedded.events[0].id}}</label>
+  </div>
+</div>
