--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,17 @@
         </div>
       </ng-template>
     </ngb-carousel>
-
 </div>
+
 <div class="container">
   <router-outlet></router-outlet>
+  <br>
+  <br>
+  <nav>
+    <a routerLink="/ticketMaster" routerLinkActive="active">Home</a>
+    <br>
+    <a routerLink="/bucket" routerLinkActive="active">Bucket List</a>
+    <br>
+  </nav>
+
 </div>
